<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:padding="16dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:id="@+id/detail_tv_idarmada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/id_armada"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"/>

                <TextView
                    android:id="@+id/detail_tv_kecepatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speed_150_km_h"/>

                <TextView
                    android:id="@+id/detail_tv_arah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/course_n"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/detail_btn_refresh"
                android:contentDescription="@string/image_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_refresh_black_24dp"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    />



</RelativeLayout>